--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="20dp">
 
-    <data>
-
-        <variable
-            name="scrambledWord"
-            type="String" />
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="15dp"
+
+        >
 
         <TextView
             android:id="@+id/tvTitle"
@@ -34,20 +30,27 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="46dp">
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp">
 
             <Button
                 android:id="@+id/btnUnscramble"
-                android:layout_width="222dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Unscramble" />
+                android:text="Unscramble"
+                />
         </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvOutput"
             android:layout_width="match_parent"
-            android:layout_height="680dp" />
+            android:layout_height="516dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            />
 
     </LinearLayout>
 
