--- a/app/src/main/res/layout/word_items.xml
+++ b/app/src/main/res/layout/word_items.xml
@@ -10,7 +10,7 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
