Created a function to check for any improper inputs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
             android:layout_height="59dp"
             android:ems="10"
             android:hint="Enter up to 15 letters"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColorHint="@color/hint_color" />
 
         <FrameLayout
             android:layout_width="match_parent"
